# caikit-ray-backend

./: .env  .isort.cfg  .prettierignore  CODEOWNERS  README.md  pyproject.toml  runtime_config.yml  tox.ini
.github/workflows/: build-library.yml
caikit_ray_backend/: __init__.py  base.py  ray_backend.py  ray_submitter.py  ray_training_actor.py  ray_training_tasks.py
caikit_ray_backend/blocks/: __init__.py  ray_train.py
caikit_ray_backend/config/: config.yml
docs/adrs/: 001-cluster-provisioning.md
scripts/: fmt.sh
tests/: __init__.py  test_jobs.py  test_ray_backend.py
tests/fixtures/: __init__.py  mock_ray_cluster.py  pyproject.toml
tests/fixtures/sample_lib/: __init__.py  config.yml
tests/fixtures/sample_lib/data_model/: sample.py
tests/fixtures/sample_lib/modules/: __init__.py
tests/fixtures/sample_lib/modules/sample_task/: __init__.py  sample_implementation.py
tests/fixtures/sample_module/: config.yml
