[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sample_lib"
version = "0.0.1"
description = "Sample Lib"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.9"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
]